# MC-Innterfaces

./: .gitlab-ci.yml  FAQ.md  README.md
assignment_3/: CMakeLists.txt  README.md  board3.yaml  example.yaml  problem1.md  problem1.yaml  problem2.md  problem3.md
assignments/practice/: CMakeLists.txt  README.md  problem1.c  problem1.md  problem2.md  problem3.md  problem4.md
assignments/practice/problem1/: CMakeLists.txt  bme280.cxx  bme280.h  bme280_example.cxx
assignments/practice/problem2/: CMakeLists.txt  thingsboard.cxx  thingsboard.h  thingsboard_example.cxx
assignments/practice/problem3/: BLE-Overview.md
assignments/practice/problem3/sampleCodes/: pair_connect.c   read_gatt.c  write_gatt.c
assignments/summary/: AnalogModesSummary.md  BasicElectronicsforEmbeddedSummary.md  BoardElectricalSafetyInstructionsSummary.md  MicroprocessorInterfacesProgrammingSummary.md  MicroprocessorInterfacesSummary.md
